--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form class="form-signin" novalidate>
+  <form class="form-signin" [formGroup]="loginForm" (ngSubmit)="onSubmit()" novalidate>
     <h1 class="h3 mb-3 font-weight-normal">Please Sign in</h1>
     <div class="form-group">
       <label for="inputUsername" class="sr-only">Username</label>
