--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -13,3 +13,10 @@
   text-decoration: none;
   padding-top: 10px;
 }
+
+.new-post {
+  float: right;
+  color: aliceblue;
+  padding-top: 10px;
+  text-decoration: none;
+}
