--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,10 @@
       <div class="col-md-6">
         <h1><a href="" class="title">Blog</a></h1>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-3" *ngIf="authService.isAuthenticated()">
+        <a href="/add-post" class="new-post">Add Post</a>
+      </div>
+      <div class="col-md-3">
         <a href="/login" class="login btn btn-primary">Login</a>
         <a href="/register" class="register btn btn-primary">Register</a>
       </div>
