--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,9 @@
       </div>
       <div class="col-md-3" *ngIf="authService.isAuthenticated()">
         <a href="/add-post" class="new-post">Add Post</a>
+        <button class="logout btn btn-primary" (click)="authService.logout()">Logout</button>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3" *ngIf="!authService.isAuthenticated()">
         <a href="/login" class="login btn btn-primary">Login</a>
         <a href="/register" class="register btn btn-primary">Register</a>
       </div>
